updated index.html to have user view

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,15 +10,13 @@
     </head>
     <body>
 
-        <h1>Welcome to the 49er Notes App!</h1>
+        <h1>Welcome {{ user.name }} to the Mobilize Posting App!</h1>
 
-        <h2>Use this site to maintain and organize your notes.</h2>
+        <h2>Use this site to ask questions by creating posts and adding comments to other discussion posts.</h2>
 
-        <h3>Course notes</h3>
+        <h3>Sign In</h3>
 
-        <h3>To Do</h3>
-
-        <h3>Work notes</h3>
+        <h3>Register</h3>
 
     </body>
 </html>
