--- a/templates/feed.html
+++ b/templates/feed.html
@@ -9,19 +9,29 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     </head>
     <body>
+
+      <nav>
+            <a href="{{ url_for('index')}}">Home</a> ||
+            <a href="{{ url_for('get_posts')}}">My Posts</a> ||
+            <a href="{{ url_for('new_post')}}">Add Post</a>
+        </nav>
+
+
+
         <h1>Listing notes</h1>
+
 
         <table>
             <tr>
                 <th>Name</th>
-                <th>Title</th>
+                <th>Subject</th>
                 <th>Date</th>
                 <th>Rating</th>
             </tr>
-            {% for key, value in notes.items() %}
+            {% for key, value in posts.items() %}
             <tr>
                 <td>{{ value.name }}</td>
-                <td>{{ value.title }}</td>
+                <td>{{ value.subject }}</td>
                 <td>{{ value.date }}</td>
                  <td>{{value.rating }}</td>
             </tr>
