--- a/static/main.css
+++ b/static/main.css
@@ -2,9 +2,9 @@ body {
     padding: 30px 30px;
     }
 h1{
-    color:green;
+    color:red;
 }
 h2{
     color:gold;
-    background:green;
+    background:blue;
 }
